[gd_scene load_steps=5 format=2]

[ext_resource path="res://PixelArt/UI/game_over.png" type="Texture" id=1]
[ext_resource path="res://UI/GameOverUI.gd" type="Script" id=2]
[ext_resource path="res://Others/Fonts/AncientModernTales-a7Po.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[node name="GameOverUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="bk" type="TextureRect" parent="."]
margin_left = 142.0
margin_right = 426.0
margin_bottom = 320.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="revive" type="TextureButton" parent="."]
anchor_left = 0.382
anchor_top = 0.575
anchor_right = 0.477
anchor_bottom = 0.619
margin_left = 0.0239868
margin_top = -1.52588e-05
margin_right = 0.0639954
margin_bottom = -0.0800018

[node name="quit" type="TextureButton" parent="."]
anchor_left = 0.523
anchor_top = 0.575
anchor_right = 0.618
anchor_bottom = 0.619
margin_left = -0.0639954
margin_top = -1.52588e-05
margin_right = -0.0240173
margin_bottom = -0.0800018

[node name="Label" type="Label" parent="."]
margin_left = 217.0
margin_top = 200.0
margin_right = 245.0
margin_bottom = 209.0
custom_colors/font_color = Color( 0.701961, 0.533333, 0.309804, 1 )
custom_fonts/font = SubResource( 1 )
text = "x50 Coins"

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 247.0
margin_top = 170.0
margin_right = 319.0
margin_bottom = 179.0
custom_colors/font_color = Color( 0.701961, 0.533333, 0.309804, 1 )
custom_fonts/font = SubResource( 1 )
text = "You don't have enough coins!"

[connection signal="pressed" from="revive" to="." method="_on_revive_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
